--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>React App</title>
     <link rel="icon" href="./assets/logo.png" type="image/x-icon" />
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="height: 100%; margin: 0">
+    <div id="root" style="height: 100%"></div>
   </body>
 </html>
