--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
     <link rel="icon" href="./assets/logo.png" type="image/x-icon" />
-  </head>
-  <body style="height: 100%; margin: 0">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Risque&family=Stick+No+Bills:wght@200..800&display=swap')
+      </style>
+     </head>
+    <body style="height: 100%; margin: 0">
     <div id="root" style="height: 100%"></div>
   </body>
 </html>
