--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Risque&family=Stick+No+Bills:wght@200..800&display=swap')
       </style>
      </head>
-    <body style="height: 100%; margin: 0">
+    <body style="height: 100%; margin: 0;">
     <div id="root" style="height: 100%"></div>
   </body>
 </html>
