--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
-    <link rel="icon" href="./assets/logo.png" type="image/x-icon" />
+    <title>AI Fashion Lab</title>
+    <link rel="icon" href="../src/assets/logo.png" type="image/x-icon" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Risque&family=Stick+No+Bills:wght@200..800&display=swap')
       </style>
